2012-02-13  Ingo Renner  <ingo.renner@dkd.de>

	!!! Removed compatibility for TYPO3 4.3

	* Fixed issue #27578: Remove references to Solr from editor facing UI

	* Added method tx_solr_Site::getLanguages()
	* Added an own implementation for making HTTP requests in tx_solr_indexqueue_PageIndexerRequest to provide better error handling/detection
	* Added tx_solr_Query::setOperator()
	* Fixed issue #30922: PHP Error in Used Facet Renderer
	* Added a check in the install script whether the download mirror can be contacted
	* Fixed an PHP warning due to a missing check whether a given URL parameter is an array when generation a facet reset URL
	* Added the Index Inspector
	* Removed backwardscompatibility for results.highlighting use search.resultsHighlighting instead
	* Added log data to page index logging
	* Added more details when logging page indexing

2012-02-10  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #30577: IMAGE and (likely) IMG_RESOURCE do not work in Index Queue mapping, credits Rik Willems

2012-02-02  Ingo Renner  <ingo.renner@dkd.de>

	! Resolved an XSS security issue

	* Updated schema and solrconfig

2012-01-27  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #29317: Deleting Records outside of a configured Solr site results in uncaught exception

2012-01-24  Ingo Renner  <ingo.renner@dkd.de>

	* Added support for language parameter when indexing records with Index Queue, resolves #31382, credits Michael Voehringer

2012-01-23  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #32176: Labels in TYPO3 4.6 are rendered as "Array", credits Yves Poersch

2012-01-05  Ingo Renner  <ingo.renner@dkd.de>

	* ! Changed minimum required TYPO3 version to TYPO3 4.5

2012-02-03  Ingo Renner  <ingo.renner@dkd.de>

	* Updated solrconfig.xml to use Lucene 3.5

2012-02-03  Olivier Dobberkau  <olivier.dobberkau@dkd.de>

	* Changed Apache Solr Version to 3.5 in install.sh

2011-12-13  Stefan Sprenger  <stefan.sprenger@dkd.de>
